form spacing and other fixes done

--- a/src/components/form/form.module.css
+++ b/src/components/form/form.module.css
@@ -1,7 +1,7 @@
 .contact_form {
   background: #f3f3f3;
   color: #1e1e1e;
-  padding: 110px 35px 0px 90px;
+  padding: 110px 65px 0px 90px;
   height: 100%;
 }
 
